--- a/html file/index1.html
+++ b/html file/index1.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     
+
+<!-- welcome page -->
+
+<header class="title">
+    <h1 class="para"><span>Al</span>M<span>OO</span>D</h1>
+        
+    </header>
+    <div class="hekma"><p>Money can't buy  <span><b>happiness</b> </span> <br> but it can buy <span><b>Drinks</b> </span> </p> </div>
+     <div class="buton"> <a  href="index2.html"><button class="btn"  id="btn1"><b>Explore Drinks</b> </button></a> 
+    </div>
+    <div class="image"> <img class="img" src="/image/—Pngtree—freshly squeezed orange juice_2442855 (1).png" alt=""></div>
+
+
 </body>
 </html>
