add container for elements and add script tag to link cafe.js page relates#7

--- a/html file/index2.html
+++ b/html file/index2.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="head">
+        <h1 class="para para2"><span>Al</span>M<span>OO</span>D</h1>
+      </header>
+  
+      <section class="container" id="container"></section>
+      <script src="/cafe.js"></script>
 </body>
 </html>
